# twin-prime-selection-bias

./: .gitignore  CLAUDE.md  README.md  RESEARCH_DIRECTIONS.md  benchmark_gpu.py  derive_bias.py  pyproject.toml  run_all.py  run_gpu.py  run_stability_analysis.py
config/: default.yaml  huge.yaml  large.yaml
data/reference/: README.md
dgx-spark/: OPTIMIZATIONS.md  README.md  WORKFLOW.md  run-container.sh  setup.sh
docs/: index.html  ring_geometry_findings.md  sieve_dynamics_framework.md
notebooks/: sanity_checks.ipynb
paper/: abstract.md  references.md  section1_introduction.md  section2_empirical.md  section3_heuristic.md  section4_residue_class.md  section4_transfer_matrix.md  section5_discussion.md
proof/: Proof.lean  lake-manifest.json  lakefile.toml
proof/Proof/: ResidueClass.lean
src/: __init__.py  coefficient_extraction.py  factorization.py  gpu_factorization.py  gpu_wheel_sieve.py  metrics.py  null_models.py  parallel_sieve.py  plotting.py  primes.py  sieve_pairs.py  transfer_matrix.py  wheel_sieve.py
src/experiments/: exp_both_rings.py  exp_cousin_primes.py  exp_cousin_primes_gpu.py  exp_cousin_primes_per_prime.py  exp_eisenstein_geometry.py  exp_epsilon_vs_p.py  exp_model_vs_empirical.py  exp_model_vs_empirical_gpu.py  exp_modp_biases.py  exp_omega_decomposition.py  exp_omega_decomposition_gpu.py  exp_p1_p2_dynamics.py  exp_per_prime_divisibility.py  exp_run_lengths.py  exp_selection_bias.py  exp_sophie_germain.py  exp_sophie_germain_gpu.py  exp_sophie_germain_per_prime.py  (+5 more)
tests/: __init__.py  test_local_density.py  test_spf_sentinels.py
(+29 files in other folders)
